src/com/baidu/yun/core/json/JSONParser.java
/* Generated By:JavaCC: Do not edit this line. JSONParser.java */
package com.baidu.yun.core.json;

//  
import java.io.StringReader;
import java.util.Map;
import java.util.HashMap;
import java.util.List;
import java.util.ArrayList;

//  
public class JSONParser implements JSONParserConstants {
    public JSONParser() {
        this(new StringReader(""));
    }

    public Map parser(String json) throws ParseException {
        ReInit(new StringReader(json));
        return object();
    }

    /** */
    final public Map object() throws ParseException {
        Map map = new HashMap();
        String key;
        Object value;
        jj_consume_token(18);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case STRING_LITERAL:
        case ID:
            key = key();
            jj_consume_token(19);
            value = value();
            map.put(key, value);
            break;
        default:
            jj_la1[0] = jj_gen;
            ;
        }
        label_1: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case 20:
                ;
                break;
            default:
                jj_la1[1] = jj_gen;
                break label_1;
            }
            jj_consume_token(20);
            key = key();
            jj_consume_token(19);
            value = value();
            map.put(key, value);
        }
        jj_consume_token(21);
        {
            if (true)
                return map;
        }
        throw new Error("Missing return statement in function");
    }

    /** */
    final public String key() throws ParseException {
        Token t;
        String value;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case ID:
            t = jj_consume_token(ID);
            {
                if (true)
                    return t.image;
            }
            break;
        case STRING_LITERAL:
            value = string();
            {
                if (true)
                    return value;
            }
            break;
        default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }

    /** */
    final public Number number() throws ParseException {
        Token t;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case INTEGER_LITERAL:
            t = jj_consume_token(INTEGER_LITERAL);
            char lastChar = t.image.charAt(t.image.length() - 1);
            if (lastChar == 'l' || lastChar == 'L') {
                {
                    if (true)
                        return Long.parseLong(t.image);
                }
            } else {
                {
                    if (true)
                        return Long.parseLong(t.image);
                }
            }
            break;
        case FLOATING_POINT_LITERAL:
            t = jj_consume_token(FLOATING_POINT_LITERAL);
            lastChar = t.image.charAt(t.image.length() - 1);
            if (lastChar == 'f' || lastChar == 'F') {
                {
                    if (true)
                        return Float.parseFloat(t.image);
                }
            } else {
                {
                    if (true)
                        return Double.parseDouble(t.image);
                }
            }
            break;
        default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }

    /** */
    final public String string() throws ParseException {
        Token t;
        t = jj_consume_token(STRING_LITERAL);
        {
            if (true)
                return t.image.substring(1, t.image.length() - 1);
        }
        throw new Error("Missing return statement in function");
    }

    /** */
    final public Object value() throws ParseException {
        Object obj;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case STRING_LITERAL:
            obj = string();
            break;
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
            obj = number();
            break;
        case 18:
            obj = object();
            break;
        case 22:
            obj = array();
            break;
        case TRUE:
            jj_consume_token(TRUE);
            obj = true;
            break;
        case FALSE:
            jj_consume_token(FALSE);
            obj = false;
            break;
        case NULL:
            jj_consume_token(NULL);
            obj = null;
            break;
        default:
            jj_la1[4] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        {
            if (true)
                return obj;
        }
        throw new Error("Missing return statement in function");
    }

    /** */
    final public List array() throws ParseException {
        List list = new ArrayList();
        Object obj;
        jj_consume_token(22);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case TRUE:
        case FALSE:
        case NULL:
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case STRING_LITERAL:
        case 18:
        case 22:
            obj = value();
            list.add(obj);
            break;
        default:
            jj_la1[5] = jj_gen;
            ;
        }
        label_2: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case 20:
                ;
                break;
            default:
                jj_la1[6] = jj_gen;
                break label_2;
            }
            jj_consume_token(20);
            obj = value();
            list.add(obj);
        }
        jj_consume_token(23);
        {
            if (true)
                return list;
        }
        throw new Error("Missing return statement in function");
    }

    /** Generated Token Manager. */
    public JSONParserTokenManager token_source;
    SimpleCharStream jj_input_stream;
    /** Current token. */
    public Token token;
    /** Next token. */
    public Token jj_nt;
    private int jj_ntk;
    private int jj_gen;
    final private int[] jj_la1 = new int[7];
    static private int[] jj_la1_0;
    static {
        jj_la1_init_0();
    }

    private static void jj_la1_init_0() {
        jj_la1_0 = new int[] { 0xc000, 0x100000, 0xc000, 0x1100, 0x4451e0,
                0x4451e0, 0x100000, };
    }

    /** Constructor with InputStream. */
    public JSONParser(java.io.InputStream stream) {
        this(stream, null);
    }

    /** Constructor with InputStream and supplied encoding */
    public JSONParser(java.io.InputStream stream, String encoding) {
        try {
            jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
        } catch (java.io.UnsupportedEncodingException e) {
            throw new RuntimeException(e);
        }
        token_source = new JSONParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 7; i++)
            jj_la1[i] = -1;
    }

    /** Reinitialise. */
    public void ReInit(java.io.InputStream stream) {
        ReInit(stream, null);
    }

    /** Reinitialise. */
    public void ReInit(java.io.InputStream stream, String encoding) {
        try {
            jj_input_stream.ReInit(stream, encoding, 1, 1);
        } catch (java.io.UnsupportedEncodingException e) {
            throw new RuntimeException(e);
        }
        token_source.ReInit(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 7; i++)
            jj_la1[i] = -1;
    }

    /** Constructor. */
    public JSONParser(java.io.Reader stream) {
        jj_input_stream = new SimpleCharStream(stream, 1, 1);
        token_source = new JSONParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 7; i++)
            jj_la1[i] = -1;
    }

    /** Reinitialise. */
    public void ReInit(java.io.Reader stream) {
        jj_input_stream.ReInit(stream, 1, 1);
        token_source.ReInit(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 7; i++)
            jj_la1[i] = -1;
    }

    /** Constructor with generated Token Manager. */
    public JSONParser(JSONParserTokenManager tm) {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 7; i++)
            jj_la1[i] = -1;
    }

    /** Reinitialise. */
    public void ReInit(JSONParserTokenManager tm) {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 7; i++)
            jj_la1[i] = -1;
    }

    private Token jj_consume_token(int kind) throws ParseException {
        Token oldToken;
        if ((oldToken = token).next != null)
            token = token.next;
        else
            token = token.next = token_source.getNextToken();
        jj_ntk = -1;
        if (token.kind == kind) {
            jj_gen++;
            return token;
        }
        token = oldToken;
        jj_kind = kind;
        throw generateParseException();
    }

    /** Get the next Token. */
    final public Token getNextToken() {
        if (token.next != null)
            token = token.next;
        else
            token = token.next = token_source.getNextToken();
        jj_ntk = -1;
        jj_gen++;
        return token;
    }

    /** Get the specific Token. */
    final public Token getToken(int index) {
        Token t = token;
        for (int i = 0; i < index; i++) {
            if (t.next != null)
                t = t.next;
            else
                t = t.next = token_source.getNextToken();
        }
        return t;
    }

    private int jj_ntk() {
        if ((jj_nt = token.next) == null)
            return (jj_ntk = (token.next = token_source.getNextToken()).kind);
        else
            return (jj_ntk = jj_nt.kind);
    }

    private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
    private int[] jj_expentry;
    private int jj_kind = -1;

    /** Generate ParseException. */
    public ParseException generateParseException() {
        jj_expentries.clear();
        boolean[] la1tokens = new boolean[24];
        if (jj_kind >= 0) {
            la1tokens[jj_kind] = true;
            jj_kind = -1;
        }
        for (int i = 0; i < 7; i++) {
            if (jj_la1[i] == jj_gen) {
                for (int j = 0; j < 32; j++) {
                    if ((jj_la1_0[i] & (1 << j)) != 0) {
                        la1tokens[j] = true;
                    }
                }
            }
        }
        for (int i = 0; i < 24; i++) {
            if (la1tokens[i]) {
                jj_expentry = new int[1];
                jj_expentry[0] = i;
                jj_expentries.add(jj_expentry);
            }
        }
        int[][] exptokseq = new int[jj_expentries.size()][];
        for (int i = 0; i < jj_expentries.size(); i++) {
            exptokseq[i] = jj_expentries.get(i);
        }
        return new ParseException(token, exptokseq, tokenImage);
    }

    /** Enable tracing. */
    final public void enable_tracing() {
    }

    /** Disable tracing. */
    final public void disable_tracing() {
    }

}
